# skunkworks_commish_takehome

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  POSTMAN_TESTING.md  README.md  docker-compose.yml  postman_collection.json  postman_environment.json  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
app/: business_logic.py  config.py  exceptions.py  logging_config.py  main.py  models.py  quotes.py  utils.py  validators.py
app/routes/: advance.py
app/routes/v1/: advance.py
infra/: main.bicep  main.json
sample_data/: carrier_remittance.csv  carrier_remittance_sample.csv  crm_policies.csv  crm_policies_sample.csv  sample_response.json
tests/: test_advancer.py  test_business_logic.py  test_integration_sample_data.py  test_validators.py
